fixed scrollbar height

--- a/client/css/chat-prefix.css
+++ b/client/css/chat-prefix.css
@@ -53,7 +53,7 @@ body{
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 10%;
+    height: 3%;
     background-color: rgb(221, 221, 221);
 }
 
@@ -75,7 +75,7 @@ body{
 
 .chat-box{
 	width: 100%;
-    height: 90%;
+	height: 94%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
