--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -34,7 +34,7 @@ body{
 
 .chat-head {
     display: flex;
-    height: 10%;
+    height: 3%;
     background-color: rgb(221, 221, 221);
 }
 
@@ -53,7 +53,7 @@ body{
 
 .chat-box{
 	width: 100%;
-    height: 90%;
+	height: 94%;
     display: flex;
 	flex-direction: column-reverse;
     background-color: rgb(221, 221, 221);
